# Rover_arm_ROS

./: LICENSE  README.md
microros_ws/install/: local_setup.sh  setup.sh
microros_ws/install/brazo_robert/share/brazo_robert/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
microros_ws/install/velocity_publisher/lib/velocity_publisher/: move_robot_service.py
microros_ws/install/velocity_publisher/share/velocity_publisher/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  (+5 more)
microros_ws/log/: latest_build
microros_ws/src/basic_mobile_robot/: package.xml
microros_ws/src/brazo_robert/: CMakeLists.txt  package.xml
microros_ws/src/brazo_robert/config/: brazo_controller.yaml  gazebo_bridge.yaml  gz_bridge.yaml  joystick.yaml  my_controllers.yaml  pointCloudToLaserScan.yaml
microros_ws/src/brazo_robert/launch/: brazo.launch.py  brazo_robert.launch.py  brazo_robert_gazebo.launch.py
microros_ws/src/brazo_robert/rviz/: rviz_configRobertUN.rviz
microros_ws/src/brazo_robert/urdf/: brazo_robert.sdf  brazo_robert.urdf.xacro  brazo_robert.xacro  ros2_control_ackermann.xacro
microros_ws/src/brazo_robert/worlds/: empty.sdf  fws_robot_world.sdf  moon.sdf
microros_ws/src/velocity_publisher/: CMakeLists.txt  package.xml
microros_ws/src/velocity_publisher/launch/: brazo_rover_control.launch.py  fws_robot_spawn.launch.py
microros_ws/src/velocity_publisher/scripts/: move_robot_client.py  move_robot_service.py  robot_control_cmd_vel.py
(+37 files in other folders)
